// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.vue matchs snapshot 1`] = `
<div>
  <my-header-stub>Home page</my-header-stub>
  <!---->
</div>
`;

exports[`Home.vue matchs snapshot 2`] = `
<div>
  <my-header-stub>Home page</my-header-stub>
  <div class="home-container">
    <p>Not yet have account?</p>
    <v-btn-stub to="/signup" outline="" color="secondary">Click here to sign up</v-btn-stub>
  </div>
</div>
`;
